--- a/ImageMerger/MainWindow.xaml
+++ b/ImageMerger/MainWindow.xaml
@@ -43,7 +43,7 @@
 
             <!--Настройки склейки-->
             <StackPanel Orientation="Vertical" Name="ConcatSettings">
-                <Grid Height="35px">
+                <Grid Height="35px" ToolTip="Указывает, какой отступ будет между картинками при склейке">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"></ColumnDefinition>
                         <ColumnDefinition Width="50px"></ColumnDefinition>
@@ -79,12 +79,9 @@
                         <ColumnDefinition Width="*"></ColumnDefinition>
                         <ColumnDefinition Width="50px"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <TextBlock TextWrapping="Wrap" ToolTip="Данный параметр игнорируется, если указаны значения в автоматической разрезке" HorizontalAlignment="Left" TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">Сколько разрезов делать</TextBlock>
+                    <TextBlock TextWrapping="Wrap" ToolTip="Если указана максимальная высота картинки, то данный пункт не работает" HorizontalAlignment="Left" TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">Сколько разрезов делать</TextBlock>
                     <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="1" Name="SliceCount"/>
                 </Grid>
-
-
-
 
                 <Grid Height="35px">
                     <Grid.ColumnDefinitions>
@@ -94,8 +91,8 @@
                     <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left"
                                TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">
                         <TextBlock.Text>Попытаться разрезать в пустой зоне?</TextBlock.Text>
-                        <TextBlock.ToolTip>Программа попытается найти такую зону, в которой не будет перепада цветов
-                            (Должен быть только один цвет в пределах 1 высоты)</TextBlock.ToolTip>
+                        <TextBlock.ToolTip>Программа попытается найти такую линию, в которой не будет перепада цветов
+                            (Должен быть только один цвет в пределах одной высоты)</TextBlock.ToolTip>
                     </TextBlock>
                     <CheckBox HorizontalAlignment="Center" IsChecked="True" VerticalAlignment="Center" Grid.Column="1"  Name="TryTrueSlice" Click="TryTrueSlice_Click"/>
                 </Grid>
@@ -114,7 +111,7 @@
                             </TextBlock>
                             <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="1" Name="TrueSliceHeight"/>
                         </Grid>
-                        <Grid Height="35px">
+                        <Grid Height="35px" ToolTip="Насколько разными допускаются цвета на 1 линии. Используется, чтобы алгоритм не ухватывал шум.">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
                                 <ColumnDefinition Width="50px"></ColumnDefinition>
@@ -125,7 +122,7 @@
                             </TextBlock>
                             <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Maximum="255" Value="32" Name="TrueSliceColorDifference"/>
                         </Grid>
-                        <Grid Height="35px" ToolTip="Не работает, если указана максимальная высота картинки">
+                        <Grid Height="35px" ToolTip="Работает, если не указана Максимальная высота. Указывает промежуток, между которым можно сделать разрез. Используется вместе с параметром 'Сколько разрезов делать'">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
                                 <ColumnDefinition Width="50px"></ColumnDefinition>
@@ -136,7 +133,7 @@
                             </TextBlock>
                             <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="50" Name="TrueSliceMaxDistance"/>
                         </Grid>
-                        <Grid Height="35px">
+                        <Grid Height="35px" ToolTip="Указывается, каков минимальный размер разрезанной картинки">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
                                 <ColumnDefinition Width="50px"></ColumnDefinition>
@@ -147,7 +144,7 @@
                             </TextBlock>
                             <xctk:IntegerUpDown Minimum="200" Height="25" Grid.Column="1" Value="200" Name="SliceMinHeight"/>
                         </Grid>
-                        <Grid Height="35px">
+                        <Grid Height="35px" ToolTip="Если у вас есть предпочтения по максимальной высоте. Алгоритм может сделать разрез больше, чем указан, если после разреза 1 из картинок меньше минимальной высоты">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"></ColumnDefinition>
                                 <ColumnDefinition Width="50px"></ColumnDefinition>
