--- a/ImageMerger_GUI/MainWindow.xaml
+++ b/ImageMerger_GUI/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ImageMerger"
         mc:Ignorable="d"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         SizeToContent="WidthAndHeight"
@@ -13,62 +12,81 @@
             <!--Входная папка-->
             <Grid Height="35px">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="70px"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="50px"></ColumnDefinition>
+                    <ColumnDefinition Width="70px" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="50px" />
                 </Grid.ColumnDefinitions>
-                <TextBlock TextWrapping="Wrap" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Center" Grid.Column="0">Входная папка</TextBlock>
-                <TextBox Margin="10,0" VerticalAlignment="Center" Height="25px" Grid.Column="1" AllowDrop="True" PreviewDrop="Drop" PreviewDragOver="DragOver" Name="ImageDir" />
+                <TextBlock TextWrapping="Wrap" HorizontalAlignment="Center" TextAlignment="Center"
+                           VerticalAlignment="Center" Grid.Column="0">
+                    Входная папка
+                </TextBlock>
+                <TextBox Margin="10,0" VerticalAlignment="Center" Height="25px" Grid.Column="1" AllowDrop="True"
+                         PreviewDrop="Drop" PreviewDragOver="DragOver" Name="ImageDir" />
                 <Button Grid.Column="2" Height="25px" Name="ImageBut" Click="ImageBut_Click">Обзор</Button>
             </Grid>
 
             <!--Выходная папка-->
             <Grid Height="35px">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="70px"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="50px"></ColumnDefinition>
+                    <ColumnDefinition Width="70px" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="50px" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock TextWrapping="Wrap" HorizontalAlignment="Center" TextAlignment="Center" VerticalAlignment="Center" Grid.Column="0" >Выходная папка</TextBlock>
-                <TextBox Margin="10,0" VerticalAlignment="Center" Height="25px" Grid.Column="1" AllowDrop="True" PreviewDrop="Drop" PreviewDragOver="DragOver" Name="outDir"/>
+                <TextBlock TextWrapping="Wrap" HorizontalAlignment="Center" TextAlignment="Center"
+                           VerticalAlignment="Center" Grid.Column="0">
+                    Выходная папка
+                </TextBlock>
+                <TextBox Margin="10,0" VerticalAlignment="Center" Height="25px" Grid.Column="1" AllowDrop="True"
+                         PreviewDrop="Drop" PreviewDragOver="DragOver" Name="outDir" />
                 <Button Grid.Column="2" Height="25px" Name="outButton" Click="outButton_Click">Обзор</Button>
             </Grid>
 
             <!--Режим работы-->
             <StackPanel Orientation="Horizontal">
                 <RadioButton Margin="0,0,10,0" GroupName="ImageProccessType" Name="ConcatMode">Склейка</RadioButton>
-                <RadioButton GroupName="ImageProccessType" Name="SliceMode" >Нарезка</RadioButton>
+                <RadioButton GroupName="ImageProccessType" Name="SliceMode">Нарезка</RadioButton>
             </StackPanel>
 
             <!--Настройки склейки-->
             <StackPanel Orientation="Vertical" Name="ConcatSettings">
                 <Grid Height="35px" ToolTip="Указывает, какой отступ будет между картинками при склейке">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="50px"></ColumnDefinition>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="50px" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">Отступ</TextBlock>
-                    <xctk:IntegerUpDown Name="offset" Grid.Column="1" Height="25px" Value="0"/>
+                    <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" TextAlignment="Left"
+                               VerticalAlignment="Center" Grid.Column="0">
+                        Отступ
+                    </TextBlock>
+                    <xctk:IntegerUpDown Name="offset" Grid.Column="1" Height="25px" Value="0" />
                 </Grid>
 
 
                 <Grid Height="35px">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="50px"></ColumnDefinition>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="50px" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" TextAlignment="Left" ToolTip="Данный параметр игнорируется, если указана максимальная высота картинки" VerticalAlignment="Center" Grid.Column="0">Сколько картинок склеивать в одну</TextBlock>
-                    <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="1" Name="countFilesConcat"/>
+                    <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" TextAlignment="Left"
+                               ToolTip="Данный параметр игнорируется, если указана максимальная высота картинки"
+                               VerticalAlignment="Center" Grid.Column="0">
+                        Сколько картинок склеивать в одну
+                    </TextBlock>
+                    <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="1" Name="countFilesConcat" />
                 </Grid>
 
                 <Grid Height="35px">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="50px"></ColumnDefinition>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="50px" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" TextAlignment="Left" ToolTip="Данный параметр игнорируется, если значение равно 0" VerticalAlignment="Center" Grid.Column="0">Максимальная высота картинки (пиксели)</TextBlock>
-                    <xctk:IntegerUpDown Minimum="0" Height="25" Grid.Column="1" Value="0" Name="maxHeightConcat"/>
+                    <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" TextAlignment="Left"
+                               ToolTip="Данный параметр игнорируется, если значение равно 0" VerticalAlignment="Center"
+                               Grid.Column="0">
+                        Максимальная высота картинки (пиксели)
+                    </TextBlock>
+                    <xctk:IntegerUpDown Minimum="0" Height="25" Grid.Column="1" Value="0" Name="maxHeightConcat" />
                 </Grid>
             </StackPanel>
 
@@ -76,91 +94,107 @@
             <StackPanel Orientation="Vertical" Name="SliceSettings">
                 <Grid Height="35px">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="50px"></ColumnDefinition>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="50px" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock TextWrapping="Wrap" ToolTip="Если указана максимальная высота картинки, то данный пункт не работает" HorizontalAlignment="Left" TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">Сколько разрезов делать</TextBlock>
-                    <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="1" Name="SliceCount"/>
+                    <TextBlock TextWrapping="Wrap"
+                               ToolTip="Если указана максимальная высота картинки, то данный пункт не работает"
+                               HorizontalAlignment="Left" TextAlignment="Left" VerticalAlignment="Center"
+                               Grid.Column="0">
+                        Сколько разрезов делать
+                    </TextBlock>
+                    <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="1" Name="SliceCount" />
                 </Grid>
 
                 <Grid Height="35px">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"></ColumnDefinition>
-                        <ColumnDefinition Width="50px"></ColumnDefinition>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="50px" />
                     </Grid.ColumnDefinitions>
                     <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left"
                                TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">
                         <TextBlock.Text>Попытаться разрезать в пустой зоне?</TextBlock.Text>
-                        <TextBlock.ToolTip>Программа попытается найти такую линию, в которой не будет перепада цветов
-                            (Должен быть только один цвет в пределах одной высоты)</TextBlock.ToolTip>
+                        <TextBlock.ToolTip>
+                            Программа попытается найти такую линию, в которой не будет перепада цветов
+                            (Должен быть только один цвет в пределах одной высоты)
+                        </TextBlock.ToolTip>
                     </TextBlock>
-                    <CheckBox HorizontalAlignment="Center" IsChecked="True" VerticalAlignment="Center" Grid.Column="1"  Name="TryTrueSlice" Click="TryTrueSlice_Click"/>
+                    <CheckBox HorizontalAlignment="Center" IsChecked="True" VerticalAlignment="Center" Grid.Column="1"
+                              Name="TryTrueSlice" Click="TryTrueSlice_Click" />
                 </Grid>
 
                 <!--Настройки TrueSlice-->
-                <GroupBox Header="Настройка пустой зоны"  Name="TrueSliceSettings">
+                <GroupBox Header="Настройка пустой зоны" Name="TrueSliceSettings">
                     <StackPanel>
-                        <Grid Height="35px" ToolTip="Указывает ширину линии проверки. Указывайте, если хотите, чтобы программа находила большие пустые промежутки">
+                        <Grid Height="35px"
+                              ToolTip="Указывает ширину линии проверки. Указывайте, если хотите, чтобы программа находила большие пустые промежутки">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="50px"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="50px" />
                             </Grid.ColumnDefinitions>
                             <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left"
-                               TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">
-                        Высота зоны
+                                       TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">
+                                Высота зоны
                             </TextBlock>
-                            <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="1" Name="TrueSliceHeight"/>
+                            <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="1"
+                                                Name="TrueSliceHeight" />
                         </Grid>
-                        <Grid Height="35px" ToolTip="Насколько разными допускаются цвета на 1 линии. Используется, чтобы алгоритм не ухватывал шум.">
+                        <Grid Height="35px"
+                              ToolTip="Насколько разными допускаются цвета на 1 линии. Используется, чтобы алгоритм не ухватывал шум.">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="50px"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="50px" />
                             </Grid.ColumnDefinitions>
                             <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left"
-                               TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">
-                        Допуск разницы цвета в зоне
+                                       TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">
+                                Допуск разницы цвета в зоне
                             </TextBlock>
-                            <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Maximum="255" Value="32" Name="TrueSliceColorDifference"/>
+                            <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Maximum="255" Value="32"
+                                                Name="TrueSliceColorDifference" />
                         </Grid>
-                        <Grid Height="35px" ToolTip="Работает, если не указана Максимальная высота. Указывает промежуток, между которым можно сделать разрез. Используется вместе с параметром 'Сколько разрезов делать'">
+                        <Grid Height="35px"
+                              ToolTip="Работает, если не указана Максимальная высота. Указывает промежуток, между которым можно сделать разрез. Используется вместе с параметром 'Сколько разрезов делать'">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="50px"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="50px" />
                             </Grid.ColumnDefinitions>
                             <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left"
-                               TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">
-                        Максимальная дальность попытки разрезать
+                                       TextAlignment="Left" VerticalAlignment="Center" Grid.Column="0">
+                                Максимальная дальность попытки разрезать
                             </TextBlock>
-                            <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="50" Name="TrueSliceMaxDistance"/>
+                            <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="50"
+                                                Name="TrueSliceMaxDistance" />
                         </Grid>
                         <Grid Height="35px" ToolTip="Указывается, каков минимальный размер разрезанной картинки">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="50px"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="50px" />
                             </Grid.ColumnDefinitions>
                             <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" TextAlignment="Left"
-                               VerticalAlignment="Center" Grid.Column="0">
-                        Минимальная высота картинки
+                                       VerticalAlignment="Center" Grid.Column="0">
+                                Минимальная высота картинки
                             </TextBlock>
-                            <xctk:IntegerUpDown Minimum="200" Height="25" Grid.Column="1" Value="200" Name="SliceMinHeight"/>
+                            <xctk:IntegerUpDown Minimum="200" Height="25" Grid.Column="1" Value="200"
+                                                Name="SliceMinHeight" />
                         </Grid>
-                        <Grid Height="35px" ToolTip="Если у вас есть предпочтения по максимальной высоте. Алгоритм может сделать разрез больше, чем указан, если после разреза 1 из картинок меньше минимальной высоты">
+                        <Grid Height="35px"
+                              ToolTip="Если у вас есть предпочтения по максимальной высоте. Алгоритм может сделать разрез больше, чем указан, если после разреза 1 из картинок меньше минимальной высоты">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"></ColumnDefinition>
-                                <ColumnDefinition Width="50px"></ColumnDefinition>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="50px" />
                             </Grid.ColumnDefinitions>
                             <TextBlock TextWrapping="Wrap" HorizontalAlignment="Left" TextAlignment="Left"
-                               VerticalAlignment="Center" Grid.Column="0">
-                        Максимальная высота картинки
+                                       VerticalAlignment="Center" Grid.Column="0">
+                                Максимальная высота картинки
                             </TextBlock>
-                            <xctk:IntegerUpDown Minimum="0" Height="25" Grid.Column="1" Value="0" Name="SliceMaxHeight"/>
+                            <xctk:IntegerUpDown Minimum="0" Height="25" Grid.Column="1" Value="0" Name="SliceMaxHeight" />
                         </Grid>
                     </StackPanel>
                 </GroupBox>
             </StackPanel>
 
             <Button Name="DoneBT" Margin="0,10,0,0" Height="50px" Click="DoneBT_Click">Выполнить</Button>
-            <ProgressBar Margin="0,10" Height="25" Maximum="1" Name="Progress" ></ProgressBar>
+            <ProgressBar Margin="0,10" Height="25" Maximum="1" Name="Progress" />
         </StackPanel>
     </Grid>
 </Window>
