--- a/ImageMerger_GUI/Views/ConcatView.xaml
+++ b/ImageMerger_GUI/Views/ConcatView.xaml
@@ -34,7 +34,8 @@
                            VerticalAlignment="Center" Grid.Column="0">
                     Сколько картинок склеивать в одну
                 </TextBlock>
-                <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1" Value="{Binding MaxFilesConcat, FallbackValue=1}" />
+                <xctk:IntegerUpDown Minimum="1" Height="25" Grid.Column="1"
+                                    Value="{Binding MaxFilesConcat, FallbackValue=1}" />
             </Grid>
 
             <Grid Height="35px">
@@ -46,7 +47,8 @@
                            Grid.Column="0">
                     Максимальная высота картинки (пиксели)
                 </TextBlock>
-                <xctk:IntegerUpDown Minimum="0" Height="25" Grid.Column="1" Value="{Binding MaxHeightConcat, FallbackValue=0}" />
+                <xctk:IntegerUpDown Minimum="0" Height="25" Grid.Column="1"
+                                    Value="{Binding MaxHeightConcat, FallbackValue=0}" />
             </Grid>
         </StackPanel>
     </Grid>
